--- a/package.json
+++ b/package.json
@@ -19,14 +19,17 @@
     "@ai-sdk/anthropic": "^2.0.34",
     "@ai-sdk/openai": "^2.0.53",
     "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/postcss": "^4.1.8",
     "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.546.0",
+    "postcss": "^8.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.4.0",
+    "use-debounce": "^10.0.4",
     "zod": "^4.1.12",
     "zustand": "^5.0.8"
   },
