feat: refactor theme toggle and update entry points for improved structure and styling

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
   "compilerOptions": {
     "allowImportingTsExtensions": true,
     "jsx": "react-jsx",
+    "incremental": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
-  }
+  },
+  "exclude": ["node_modules"]
 }
