--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.546.0",
+    "motion": "^12.23.24",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.4",
     "react": "^19.2.0",
@@ -71,6 +72,7 @@
     "sonner": "^2.0.7",
     "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
+    "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0",
     "use-debounce": "^10.0.4",
     "uuid": "^13.0.0",
@@ -84,6 +86,7 @@
     "@types/react-dom": "^19.2.2",
     "@wxt-dev/module-react": "^1.1.3",
     "autoprefixer": "^10.4.21",
+    "babel-plugin-react-compiler": "^1.0.0",
     "tailwindcss": "^4.1.15",
     "typescript": "^5.9.3",
     "wxt": "^0.20.6"
