--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "zip:firefox": "wxt zip -b firefox",
     "type-check": "tsc --noEmit",
     "postinstall": "wxt prepare",
-    "format": "biome check --write"
+    "format": "biome check --write",
+    "lint": "bun run format"
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.34",
@@ -53,6 +54,7 @@
     "@tanstack/react-query": "^5.90.5",
     "@tanstack/react-virtual": "^3.13.12",
     "@types/uuid": "^11.0.0",
+    "@webext-core/proxy-service": "^1.2.1",
     "ai": "^5.0.76",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -71,11 +73,10 @@
     "react-resizable-panels": "^3.0.6",
     "recharts": "2.15.4",
     "sonner": "^2.0.7",
-    "superjson": "^2.2.2",
     "tailwind-merge": "^3.3.1",
     "tailwind-variants": "^3.1.1",
     "tw-animate-css": "^1.4.0",
-    "use-debounce": "^10.0.4",
+    "use-debounce": "^10.0.6",
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.12",
