feat: refactor field analysis and form detection
- Removed old icon files and added new icon files with updated naming conventions.
- Deleted unused SVG files and added a new favicon SVG.
- Implemented FieldAnalyzer class to analyze form fields and extract metadata.
- Integrated FieldAnalyzer into FormDetector for enhanced field detection.
- Updated content script to utilize the new field analysis logic.
- Replaced placeholder icons in options and popup components with the new favicon.
- Improved logging for detected forms and fields in the content script.
- Updated application description in the manifest file.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "wxt-react-starter",
-  "description": "manifest.json description",
+  "name": "superfill.ai",
+  "description": "AI-powered form filling browser extension",
   "private": true,
   "version": "0.0.0",
   "type": "module",
